maze.lessons.maze.island.IslandMaze.scala.error
Escaper:4: error: not found: value getMeOutHere
  getMeOutHere
  ^Escaper:10: error: not found: value peutAllerNord
    if (peutAllerNord()) {
        ^Escaper:25: error: not found: value peutAllerNord
  while (!peutAllerNord()) {
          ^